# sdaadof_ws

./: .gitignore  MyCommands2.odt  OneEuroFilter.py  average_comm_time.py  filter_testing.py  frames_2025-02-08_15.50.08.gv  frames_2025-06-10_13.47.12.gv  frames_2025-06-10_13.53.05.gv  frames_2025-06-10_14.56.15.gv  frames_2025-06-23_11.44.08.gv  frames_2025-06-23_11.47.14.gv  frames_2025-07-05_09.21.41.gv  frames_2025-07-05_09.23.09.gv  frames_2025-09-24_20.59.16.gv  projection_matrix.npy
daadbot_bringup/launch/: real_robot_table.launch.py  sim_robot.launch.py  sim_robot_table.launch.py
daadbot_controller/: package.xml
daadbot_controller/config/: pos_trajectory_controller.yaml  vel_trajectory_controller_hw.yaml
daadbot_controller/launch/: controller.launch.py  forw_pos_controller_table.launch.py  vel_controller.launch.py  vel_ncontroller_table.launch.py
daadbot_controller/src/: daadbot_interface.cpp
daadbot_desc/dae/: final_7dof_assemblyLatest2_Link_5_visual_vis_1.dae  final_7dof_assemblyLatest2_base_claw_link1_respondable_coll_1.dae  final_7dof_assemblyLatest2_base_claw_link1_visual_vis_1.dae  final_7dof_assemblyLatest2_endeffector_visual_vis_1.dae  final_7dof_assemblyLatest2_gear2_link_respondable_coll_1.dae
daadbot_desc/launch/: display.launch.py  gazebo_hw_table_vel.launch.py  gazebo_inverted_pos_forw.launch.py  gazebo_inverted_vel.launch.py  gazebo_vel.launch.py
daadbot_desc/meshes/: Link_2.STL  base_claw_link1.STL  base_link.STL  gear2_link.STL
daadbot_desc/urdf/: four_dof.urdf.xacro  previous_full.urdf.xacro
daadbot_desc/urdf/urdf_inverted_pos/: daadbot.urdf.xacro
daadbot_desc/urdf/urdf_inverted_pos_forw/: daadbot.urdf.xacro
daadbot_desc/urdf/urdf_inverted_pos_forw_bottle/: bottle.xacro
daadbot_desc/urdf/urdf_new_table_vel/: new_urdf.urdf.xacro
daadbot_desc/urdf/urdf_table/: daadbot.urdf.xacro
daadbot_desc/urdf/urdf_table_effort/: daadbot.urdf.xacro
daadbot_desc/urdf/urdf_table_vel/: daadbot.urdf  daadbot.urdf.xacro
daadbot_desc/urdf/urdf_table_vel_hw/: daadbot_gazebo.xacro
daadbot_desc/urdf/urdf_table_vel_n/: daadbot.urdf.xacro
daadbot_desc/urdf/urdf_table_vel_sim/: daadbot_gazebo.xacro
daadbot_desc/worlds/: table_world.sdf  table_world2.urdf
daadbot_handpose/: package.xml
daadbot_moveit/config/: daadbot.srdf  moveit.rviz  moveit6.rviz  moveit9.rviz  moveit_controllers_vel_sim.yaml
daadbot_moveit/launch/: moveit.launch.py  moveit_effort.launch.py  moveit_table.launch.py
daadbot_msgs/msg/: ZTorques.msg
daadbot_posegen/launch/: mp_interface.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_list
moveit_pose/src/: arm_pose.cpp
some_examples_cpp/src/: hardware_position_controller_trajectory.cpp  pick_place_sim.cpp
some_examples_py/: package.xml  setup.cfg
some_examples_py/some_examples_py/: simple_publisher.py  z_torque_aggregator.py
src/daadbot_bringup/: CMakeLists.txt  package.xml
src/daadbot_bringup/launch/: real_robot_inverted.launch.py  real_robot_table.launch.py  real_sim_robot_table.launch.py  real_world_robot.launch.py  rviz2.launch.py  sim_2_link_forw_torque.launch.py  sim_pendulum_forw_torque.launch.py  sim_robot_inverted.launch.py  sim_robot_inverted_forw_pos_bottle.launch.py  sim_robot_inverted_forw_pos_hw.launch.py  sim_robot_inverted_forw_torque.launch.py  sim_robot_inverted_pos.launch.py  sim_robot_inverted_pos_wo_moveit_input.launch.py  sim_robot_inverted_pos_wo_moveit_sliders.launch.py  sim_robot_inverted_torque.launch.py  sim_robot_no_table.launch.py  sim_robot_table.launch.py  sim_robot_table_hand.launch.py  (+2 more)
src/daadbot_controller/: CMakeLists.txt  daadbot_controller.xml
src/daadbot_controller/config/: daadbot_controllers.yaml  dual_trajectory_controller.yaml  effort_command_controller.yaml  effort_command_controller_2link.yaml  effort_command_controller_pendulum.yaml  effort_trajectory_controller.yaml  forw_pos_controller.yaml  forw_pos_controller_bottle.yaml  vel_ntrajectory_controller.yaml  vel_trajectory_controller.yaml  vel_trajectory_controller_hw.yaml  vel_trajectory_controller_sim.yaml
src/daadbot_controller/include/daadbot_controller/: can_interface.hpp  daadbot_interface.hpp  sliding_mode_control.hpp
src/daadbot_controller/launch/: controller.launch.py  effort_controller.launch.py  effort_controller_table.launch.py  effort_forw_controller_2link.launch.py  effort_forw_controller_inverted.launch.py  effort_forw_controller_pendulum.launch.py  forw_pos_controller_table_bottle.launch.py  pos_controller_table.launch.py  vel_controller.launch.py  vel_controller_table.launch.py  vel_controller_table_hw.launch.py  vel_ncontroller_table.launch.py
src/daadbot_controller/src/: can_interface.cpp  daadbot_interface copy.cpp  daadbot_interface.cpp  daadbot_interface_12_Aug.cpp  daadbot_interface_base.cpp  daadbot_interface_last.cpp  daadbot_interface_stop_vol.cpp  m_interface.cpp  motor_can_node.cpp  n_interface.cpp  new_inverted_basic.cpp  sliding_mode.cpp  sliding_mode_control.cpp
src/daadbot_desc/: CMakeLists.txt  package.xml
src/daadbot_handpose/: CMakeLists.txt  package.xml
src/daadbot_handpose/launch/: wpose_mv_interface.launch.py
src/daadbot_handpose/src/: wrist_pose.cpp
src/daadbot_moveit/: CMakeLists.txt  package.xml
src/daadbot_msgs/: CMakeLists.txt  package.xml
src/daadbot_msgs/action/: DaadbotTaskServer.action
src/daadbot_posegen/: CMakeLists.txt  package.xml
src/moveit_pose/: CMakeLists.txt  package.xml
src/moveit_pose/src/: arm_pose.cpp  hand_pose.cpp  moveit_pose.cpp
src/pinocchio_test_pkg/: package.xml  setup.cfg  setup.py
src/some_examples_cpp/: CMakeLists.txt  package.xml
src/some_examples_cpp/scripts/: target_angle_gui.py
src/some_examples_cpp/src/: can_driver.cpp  executor_pick_place.cpp  executor_pick_place_2.cpp  joint_angles_jtc.cpp  joint_angles_jtc_2.cpp  joint_angles_jtc_target_increments.cpp  joint_angles_jtc_target_increments_multi.cpp  lifecycle_node_ex.cpp  my_moveit_interface.cpp  reachability_ws.cpp  simple_publisher.cpp
src/some_examples_py/: package.xml  setup.py
(+336 files in other folders)
